			Replace myVector.clamp(min, max) with clamp(VectorType(min), myVector, VectorType(max)).
			Replace myVector.clampLower(min) with clampLower(VectorType(min), myVector).
			Replace myVector.clampUpper(max) with clampUpper(myVector, VectorType(max)).
		* reciprocal, reciprocalSquareRoot and squareRoot are now global functions, to work the same for scalar operations in template functions.
			Replace myVector.reciprocal() with reciprocal(myVector).
			Replace myVector.reciprocalSquareRoot() with reciprocalSquareRoot(myVector).
			Replace myVector.squareRoot() with squareRoot(myVector).
	* Textures have been separated from images to allow using them as separate value types.
		Because it was very difficult to re-use internal texture sampling methods for custom rendering pipelines.
		  Now images and textures have immutable value allocated heads and all side-effects are in the pixel buffers.		  
		ImageRgbaU8 has been replaced by TextureRgbaU8 for the diffuse and lightmap textures in modelAPI.h.
		  Then you must create a texture from an image ahead of time and then give the texture to the model or drawn polygon.
		Replace 'image_generatePyramid' with 'texture_generatePyramid'.
		Create a texture from the image using texture_create_RgbaU8 with the image and the number of resolutions.
		  Then assign the texture instead of the image.
	* PackOrder.h has a new packOrder_ prefix for global functions to prevent naming conflicts.
		Replace 'getRed' with 'packOrder_getRed'.
		Replace 'getGreen' with 'packOrder_getGreen'.
		Replace 'getBlue' with 'packOrder_getBlue'.
		Replace 'getAlpha' with 'packOrder_getAlpha'.
		Replace 'packBytes' with 'packOrder_packBytes'.
		Replace 'floatToSaturatedByte' with 'packOrder_floatToSaturatedByte'.
	* Because the new string printing uses exact matching for basic types, bool is now printed as true or false instead of 1 or 0.
		Cast to uint32_t if you want bool interpreted as an integer as before.
		Does not affect PersistentBoolean.