@@ -130,7 +130,7 @@ Make sure to manually erase object files in your temporary folder once in a whil
 <IMG SRC="Images/SmallDot.png">
 Copy the folder of a template program to where you want it.
 If you want a 3D application with animations, start from basic3D.
-If you want graphical user interface that only redrawn when something happens, start from basicGUI.
+If you want graphical user interface that only redrawns when something happens, start from basicGUI.
 If you want a command line interface application, start from basicCLI to only depend on the most essential parts of the library.
 
 </P><P>
