@@ -10,10 +10,10 @@ COMPILER_FLAGS=$6 # -DDEBUG/-DNDEBUG -std=c++14/-std=c++17 -O2/-O3
 LINKER_FLAGS=$7 # Additional linker flags for libraries and such
 
 # Allow calling the build script
-chmod +x ${ROOT_PATH}/tools/build.sh
+chmod +x ${ROOT_PATH}/tools/buildScripts/build.sh
 
 # Compile and link
-${ROOT_PATH}/tools/build.sh "$1" "$2" "$3" "$4" "$5" "$6" "$7"
+${ROOT_PATH}/tools/buildScripts/build.sh "$1" "$2" "$3" "$4" "$5" "$6" "$7"
 if [ $? -ne 0 ]
 then
 	exit 1
