@@ -76,3 +76,8 @@ Changes from version 0.2.0 to version 0.3.0 (Performance, safety and template im
 	* Because the new string printing uses exact matching for basic types, bool is now printed as true or false instead of 1 or 0.
 		Cast to uint32_t if you want bool interpreted as an integer as before.
 		Does not affect PersistentBoolean.
+	* Folders have been reorganized to be less confusing for beginners.
+		Replace 'tools/build.sh' with 'tools/buildScripts/build.sh'.
+		Replace 'tools/buildAndRun.sh' with 'tools/buildScripts/buildAndRun.sh'.
+		Replace 'tools/buildLibrary.sh' with 'tools/buildScripts/buildLibrary.sh'.
+		Replace 'tools/clean.sh' with 'tools/buildScripts/clean.sh'.
